<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, CalendarActivity!</string>
    <string name="app_name">日历</string>
    <string name="noschedleall">没有日程</string>
    <string name="add">添加</string>
    <string name="back">返回</string>
    <string name="title_schedule_type">日程类型：</string>
    <string name="title_remind_type">提醒方式：</string>
    <string name="title_remind_date">提醒日期：</string>
    <string name="title_remind_time">提醒时间：</string>
    <string name="hint_edit_schedule_content">请输入你的日程...</string>
    <string name="schedule_detail">日程详情</string>
    <string name="schedule">日程</string>
    <string name="remind_type">提醒类型</string>
    <string name="schedule_type">日程类型</string>
    
    <string name="ensure">确定</string>
    <string name="cancel">取消</string>
</resources>
