<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg2"
    android:orientation="vertical" >
    <FrameLayout 
        android:layout_width="fill_parent"
    	android:layout_height="390dp"
    	android:background="@drawable/bg2"
    	android:orientation="vertical">
    <com.fortwone.borderText.BorderTextView 
        android:id="@+id/toptext1"
       	android:layout_width="fill_parent" 
	    android:layout_height="38dp"
        android:gravity="center"
        android:background="@color/title_red"
        android:textColor="@color/text_white"
        android:text="@string/noschedleall"
        android:textSize="15sp"/>
    
    <com.fortwone.borderText.BorderTextView 
        android:id="@+id/info"
        android:textColor="@color/text_black"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="暂无"
		android:layout_gravity="center_vertical" />
        
    </FrameLayout>

    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
    	android:layout_height="38dp"
    	android:background="@drawable/bg2"
    	android:orientation="horizontal">
    	<Button 
        	android:id="@+id/back"
        	android:layout_width="wrap_content"
        	android:layout_marginTop="5dp"
        	android:layout_height="40dp"
        	android:layout_marginRight="10dp"
        	android:layout_gravity="left"
        	android:background="@drawable/yun"
        	android:text="@string/back"/>
    	<Button
    	    android:id="@+id/add"
        	android:layout_width="wrap_content"
        	android:layout_height="38dp"
        	android:layout_marginTop="5dp"
        	android:layout_marginLeft="150dp"
        	android:background="@drawable/yun"
        	android:layout_gravity="right"
        	android:text="@string/add" />
    	    
        	
        
    </LinearLayout>

    

</LinearLayout>
