<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
    android:orientation="vertical"
	>
    <TextView 
        android:id="@+id/scheduleTop" 
        android:layout_width="fill_parent" 
        android:layout_height="40dip" 
        android:background="@color/title_blue" 
        android:textColor="#ffffff" 
        android:gravity="center" 
        android:text="编辑日程" />
    
    <LinearLayout 
        android:id="@+id/ll_schedule_type"
        android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:layout_marginTop="5.0dip"
	    android:paddingLeft="10dip"
	    android:paddingRight="10dip"
	    android:clickable="true" 
	    android:background="#ffffff"
	    android:orientation="horizontal"
        >
        <TextView 
            android:layout_width="0dip" 
	        android:layout_height="40dip" 
	        android:textColor="#ff000000" 
	        android:gravity="center_vertical" 
	        android:layout_weight="1"
	        android:text="@string/title_schedule_type"
	        />
        <TextView 
	        android:id="@+id/scheduleType"
	        android:layout_width="0dip" 
	        android:layout_height="40dip" 
	        android:layout_weight="3"
	        android:textColor="#ff000000" 
	        android:gravity="center_vertical" 
	        android:drawableRight="@drawable/schedule_type" 
	        />
    </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/ll_remind_type"
        android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:layout_marginTop="5.0dip"
	    android:paddingLeft="10dip"
	    android:paddingRight="10dip"
	    android:clickable="true" 
	    android:background="#ffffff"
	    android:orientation="horizontal"
        >
        <TextView 
            android:layout_width="0dip" 
	        android:layout_height="40dip" 
	        android:textColor="#ff000000" 
	        android:gravity="center_vertical" 
	        android:layout_weight="1"
	        android:text="@string/title_remind_type"
	        />
	    <TextView 
	        android:id="@+id/tv_remindType" 
	        android:layout_width="0dip" 
	        android:layout_height="40dip" 
	        android:textColor="#ff000000" 
	        android:gravity="center_vertical" 
	        android:layout_weight="3"
	        android:drawableRight="@drawable/schedule_type" 
	        />
    </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/ll_remind_date"
        android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:layout_marginTop="5.0dip"
	    android:paddingLeft="10dip"
	    android:paddingRight="10dip"
	    android:clickable="true" 
	    android:background="#ffffff"
	    android:orientation="horizontal"
        >
	    <TextView 
            android:layout_width="0dip" 
	        android:layout_height="40dip" 
	        android:textColor="#ff000000" 
	        android:gravity="center_vertical" 
	        android:layout_weight="1"
	        android:text="@string/title_remind_date"
	        />
	    <TextView 
	        android:id="@+id/scheduleDate" 
	        android:layout_width="0dip" 
	        android:layout_height="40dip" 
	        android:textColor="#ff000000" 
	        android:gravity="center_vertical" 
	        android:layout_weight="3"
	        android:drawableRight="@drawable/schedule_type"
	        />
    </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/ll_remind_time"
        android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:layout_marginTop="5.0dip"
	    android:paddingLeft="10dip"
	    android:paddingRight="10dip"
	    android:clickable="true" 
	    android:background="#ffffff"
	    android:orientation="horizontal"
        >
	    <TextView 
            android:layout_width="0dip" 
	        android:layout_height="40.0dip" 
	        android:textColor="#ff000000" 
	        android:gravity="center_vertical" 
	        android:layout_weight="1"
	        android:text="@string/title_remind_time"
	        />
	    <TextView 
	        android:id="@+id/seletedtime"
	        android:layout_width="0dip"
	        android:layout_height="40dp"
	        android:drawableRight="@drawable/schedule_type"
	        android:background="#ffffff"
	        android:textColor="#252525"
	        android:layout_weight="3"
	        android:gravity="center_vertical"
	        />
	</LinearLayout>
	
    <com.fortwone.borderText.BorderEditText 
        android:textColor="#ff000000" 
        android:gravity="top" 
        android:id="@+id/scheduleText" 
        android:background="@null" 
        android:padding="10.0dip" 
        android:layout_margin="5dip"
        android:layout_width="fill_parent" 
        android:layout_height="200.0dip" 
        android:layout_marginTop="5.0dip" 
        android:hint="@string/hint_edit_schedule_content" 
        />
    <Button
        android:textColor="#ffffffff"
        android:gravity="center" 
        android:id="@+id/save" 
        android:background="@drawable/yun_red" 
        android:clickable="true" 
        android:layout_width="fill_parent" 
        android:layout_height="60.0dip" 
        android:layout_marginTop="5.0dip" 
        android:text="保存" 
        />
</LinearLayout>